kubernetes/deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: photo-manager
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: photo-manager
        postgres-postgresql-client: "true"
    spec:
      containers:
        - name: photo-manager
          image: jeffutter/photo-manager@sha256:140077535a77e163710be05c08d8131d45fc1492bf91c7f12d7560f996816d76
          args: ["foreground"]
          ports:
            - name: http
              containerPort: 4000
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 3
            periodSeconds: 3
