kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: photo-manager
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: photo-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: LoadBalancer
